# mlops2025_KarimDaou_MathieuAjaka

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: feature_engineering.py  preprocess.py  run_batch_inference_pipeline.py  run_training_pipeline.py
src/mlproject/features/: build.py
src/mlproject/pipelines/: batch_inference_pipeline.py  local.py  training_pipeline.py
src/mlproject/preprocess/: cleaning.py
src/mlproject/utils/: paths.py
