[project]
name = "ml-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "pyarrow>=15.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
train = "mlproject.pipelines.local:train_cli"
inference = "mlproject.pipelines.local:inference_cli"

